Bug 1803740 - Add logging to explain why MobileViewportManager didn't perform shrink-to-fit. r=hiro

Differential Revision: https://phabricator.services.mozilla.com/D167894